--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,11 +47,18 @@ nav {
     text-decoration: none;
 }
 
+footer {
+    height: 48px;
+    background-color: #666666;
+    border-top: 8px solid #4aaaa5;
+    text-align: center;
+}
+
 section {
     background-color: #ffffff;
     width: 900px;
     /* using viewport units I don't quite get yet */
-    min-height: calc(80vh - 70px);
+    min-height: calc(100vh - 70px);
     padding: 30px;
     margin-left: auto;
     margin-right: auto;
@@ -96,21 +103,19 @@ section {
     z-index: 2;
 }
 
-footer {
-    height: 48px;
-    background-color: #666666;
-    border-top: 8px solid #4aaaa5;
-    text-align: center;
-}
+/* forms */
 
-input {
+input[text], input[email] {
     width: 100%;
-    padding: 10px;
+    margin: 8px;
 }
 
 textarea {
     width: 100%;
+    margin: 8px;
 }
+
+/* links and link classes */
 
 a, a:visited {
     color: #777777;
