--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,9 @@ body{
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     z-index: -2;
+    /* flexbox didn't work like I wanted & I don't really get it */
+    /* display: flex; */
+    /* flex-direction:column; */
 }
 
 header {
@@ -49,16 +52,19 @@ nav {
 }
 
 footer {
-    height: 3em;
+    height: 4em;
     background-color: #666666;
     border-top: 0.5em solid #4aaaa5;
     text-align: center;
+    margin-bottom: -4em;
+    /* flex-shrink: 0; */
 }
 
 section {
     background-color: #ffffff;
     width: 900px;
-    min-height: calc(100vh - 3em);
+    min-height: 100%;
+    /* flex: 1 0 auto; */
     padding: 2em;
     margin-left: auto;
     margin-right: auto;
@@ -66,6 +72,14 @@ section {
     margin-bottom: 2em;
     border: 1px solid #cccccc;
 }
+
+/* helps make the sticky footer work. */
+/* unsatisfatorily, I might add       */
+.pusher {
+    height: 8em;
+    /* margin-bottom: -4em; */
+    /* min-height: calc(30vh - 4em); */
+    }
 
 #profile-pic {
     float: left;
@@ -82,8 +96,8 @@ p {
 .portfolio {
     position: relative;
     display: inline-block;
-    width: 300px;
-    margin: 10px;
+    width: 19em;
+    margin: .625em;
 }
 
 .portfolio-pic {
@@ -117,8 +131,8 @@ input[type=text], input[type=email] {
 input[type=submit] {
     height: 2em;
     width: 6em;
-    margin: 1em;
-    font-size: 1.625em;
+    margin-top: 1em;
+    font-size: 1.5em;
     color: #ffffff;
     background-color: #4aaaa5;
     text-shadow: none;
